# API-Scrapper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml  quality.yml  security.yml  test.yml
config/: ai_policy.json
data/: signatures.json
docs/: architecture.md  cli-reference.md  environment-variables.md  feature-branch-plan.md  production-ready-checklist.md
src/: AISearch.py  AIWorkflow.py  APIScanner.py  APISniffer.py  APIVerifier.py  health.py  logging_setup.py  notifier.py
src/scanner/: __init__.py  scanner_archive.py  scanner_args.py  scanner_branch.py  scanner_io.py  scanner_keyboard.py  scanner_network.py  scanner_proxy.py  scanner_signals.py  scanner_state.py  scanner_targets_live.py  scanner_token.py  scanner_ui.py
src/shared/: __init__.py  ai_client.py  ai_policy.py  ai_search_runtime.py  api_signatures.py  category_routing.py  fast_scanner.c  requests_compat.py  scanner_dashboard.py  scanner_matcher.py  scanner_targets.py  signature_loader.py
tests/: conftest.py  test_ai_client.py  test_category_routing.py  test_scanner_io.py  test_scanner_matcher.py  test_scanner_targets.py  test_signature_loader.py
tests/fixtures/: sample_signatures.json
